--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy~=1.18.5
+numpy~=1.19.5
 matplotlib~=3.3.0
-pandas~=1.1.0
+pandas~=1.2.1
 click~=7.1.2
-scikit-learn~=0.23.2
-scipy~=1.5.2
+scikit-learn~=0.24.1
+scipy~=1.6.0
 Keras~=2.4.3
+DateTime~=4.3
